<resources>
    <string name="app_name">MindHealth</string>

    <!-- UI Display -->
    <string name="splash_screen_image_desc">Application Logo</string>
    <string name="role_screen_text_subtitle"> Easing access to mental health care services</string>
    <string name="hint_input_first_name">First name</string>
    <string name="hint_input_last_name">Last name</string>
    <string name="hint_input_password">Password</string>
    <string name="hint_input_email">Email</string>
    <string name="hint_input_confirm_password">Confirm password</string>
    <string name="btn_patient_selection_text">I need therapy</string>
    <string name="btn_therapist_selection_text">I\'m a therapist</string>
    <string name="txv_create_account_text">Create account</string>
    <string name="btn_register_via_google_text">Sign in with google</string>
    <string name="txv_or_text">or</string>
    <string name="txv_login_text">Log In</string>
    <string name="txv_reset_password_text">Forgot password</string>
    <string name="txv_welcome_user_text">Welcome %1$s, </string>
    <string name="txv_feelings_inquiry_text">How are you feeling today?</string>
    <string name="txv_assessment_state_text">Assessment state</string>
    <string name="btn_view_responses_link_text">View your responses</string>
    <string name="btn_view_assessment_link_text">Take assessment test</string>
    <string name="btn_therapist_selection_state_text">You\'re yet to be assigned a therapist</string>
    <string name="therapist_selection_true"> Get to know more about your therapist</string>
    <string name="btn_therapist_selection_true"> View therapist profile</string>
    <string name="icon_assessment_status_false">Assessment not done icon</string>
    <string name="icon_assessment_status_true">Assessment done icon</string>
    <string name="btn_therapist_selection_link_text">Select therapist</string>
    <string name="txv_scheduled_sessions_text">Scheduled sessions</string>
    <string name="txv_ongoing_sessions_text">Ongoing sessions</string>
    <string name="txv_personal_info_text">Personal info</string>
    <string name="txv_personal_info_subtext">View/edit personal info</string>
    <string name="txv_therapist_info_text">Therapist profile</string>
    <string name="txv_therapist_info_subtext">View, rate/switch therapist</string>
    <string name="icon_session_history_desc">Icon representing session history</string>
    <string name="txv_session_history_info_text">Session history</string>
    <string name="txv_session_history_subtext">View previous sessions</string>
    <string name="logout">Logout</string>
    <string name="open_personal_info_screen">Open personal info screen </string>
    <string name="open_therapist_profile_screen">Open therapist profile screen</string>
    <string name="open_session_history_screen">Open session history screen </string>
    <string name="content_desc_upload">Select file to upload</string>
    <string name="txv_upload_cv">Upload resume</string>
    <string name="txv_upload_cv_file_name">Upload resume: %1$s </string>
    <string name="error_msg_no_file">Select resume in pdf file format</string>
    <string name="txv_greetings_user_text">Hello %1$s, </string>
    <string name="txv_welcome_therapist_text">Welcome to MindHealth</string>
    <string name="txv_update_profile_prompt_text">Let us get to know you better</string>
    <string name="btn_update_profile_link_text">Update your profile</string>
    <string name="txv_availability_state_text">Update your availability status</string>
    <string name="txv_availability_set_text">Your session availability: %1$s</string>
    <string name="icon_availability_status_false">Not available</string>
    <string name="icon_availability_status_true">Available</string>
    <string name="btn_update_availability_text">Update availability</string>
    <string name="hint_input_short_desc">Short description</string>
    <string name="hint_input_concerns">Concerns(comma-separated)</string>
    <string name="hint_input_helping_approach">Approach to helping</string>
    <string name="hint_input_services_provided">Services provided(comma-separated)</string>
    <string name="working_ages">Select ages you work with</string>
    <string name="preferred_lang">Select your preferred language(s)</string>
    <string name="hint_input_physical_address">Office address</string>
    <string name="menu_therapy_profile">Therapy profile</string>
    <string name="content_desc_avatar">User\'s avatar</string>
    <string name="content_desc_country_icon">User\'s country</string>
    <string name="content_desc_gender_icon">User\'s gender</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone number</string>
    <string name="hint_update_profile">/* Update profile */</string>
    <string name="ages_preferences">Ages I work with</string>
    <string name="lang_preferred">Languages</string>
    <string name="numbered_list">%1$d. %2$s \n</string>


    <!-- Navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_session">Session</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_more">More</string>
    <string name="menu_role_selection">Select a role</string>
    <string name="menu_assessment">Assessment</string>
    <string name="menu_edit_profile">Edit Profile</string>

    <!-- App Notifications -->
    <string name="toast_log_in_fail"> Authentication failure</string>
    <string name="toast_sign_up_fail"> Something went wrong </string>
    <string name="toast_email_verification_success"> Sent email verification </string>
    <string name="toast_email_verification_fail"> Error while sending email verification. Click "Resend Email Verification" to retry </string>
    <string name="toast_email_verification_prompt"> Check your email to verify your account </string>
    <string name="toast_assessment_choices_save_success"> Your responses have been saved </string>
    <string name="toast_assessment_choices_save_fail">Error occurred while saving your responses </string>
    <string name="toast_log_in_wrong_role_patient"> Only patient login allowed </string>
    <string name="toast_log_in_wrong_role_therapist"> Only therapist login allowed </string>
    <string name="toast_upload_progress"> Upload progress: %1$d%%</string>
    <string name="toast_upload_paused">Upload status: Paused</string>
    <string name="toast_upload_fail">Upload status: Failed</string>
    <string name="toast_upload_success"> Upload status: Success </string>
    <string name="toast_log_in_unvetted_therapist">Your application is still being vetted</string>
    <string name="toast_therapist_profile_data_save_success">Your profile has been updated</string>
    <string name="toast_therapist_profile_data_save_fail">Error occurred while saving your profile data</string>
    <string name="toast_update_personal_info_success"> Your personal info has been updated</string>
    <string name="toast_update_personal_info_fail"> Error while updating personal info </string>
    <string name="toast_take_assessment_prompt"> Kindly complete the assessment before the therapist selection</string>

    <!-- Error messages -->
    <string name="error_msg_required"> All fields must be filled </string>
    <string name="error_msg_pswd_confirm_pswd"> Password and Confirm password should match </string>
    <string name="error_msg_pswd_criteria"> Password should be a combination of uppercase, lowercase and digits </string>
    <string name="error_msg_pswd_length"> Minimum password length is 8 characters </string>
    <string name="error_msg_email_criteria"> Email pattern is name@example.com </string>

    <!-- Database fields -->
    <string name="dbcol_therapists">therapists</string>
    <string name="dbcol_patients">patients</string>
    <string name="dbcol_assessment"> assessment </string>
    <string name="doc_initial_assessment"> initial assessment </string>
    <string name="storage_images">images</string>
    <string name="storage_resume">resume</string>

    <!-- Assessment questions -->
    <string name="assessment_title">Initial Assessment </string>
    <string name="assessment_question1">What is your gender?</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="other_gender">Other</string>
    <string name="assessment_question2">How old are you?</string>
    <string name="child_age">0 – 18 years</string>
    <string name="young_adult">19 – 30 years</string>
    <string name="middle_aged">31 – 45 years</string>
    <string name="old_aged">Above 45 years</string>
    <string name="assessment_question3">What is your relationship status?</string>
    <string name="single_status">Single</string>
    <string name="married_status">Married</string>
    <string name="divorced_status">Divorced</string>
    <string name="widowed_status">Widowed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="assessment_question4">Have you seen a therapist before?</string>
    <string name="assessment_question5">Do you think COVID 19 has affected your mental health?</string>
    <string name="assessment_question6">How would you describe your physical health?</string>
    <string name="just_there">Just there</string>
    <string name="in_between">In between</string>
    <string name="great">Great</string>
    <string name="assessment_question7">How would you describe your eating habits?</string>
    <string name="assessment_question8">How would you rate your finances?</string>
    <string name="assessment_question9">What is your preferred language?</string>
    <string name="lang_eng">English</string>
    <string name="lang_swa">Swahili</string>
    <string name="lang_fre">French</string>
    <string name="assessment_question10">Select your country</string>
    <string name="assessment_question11">Select your preferred options</string>
    <string name="individual_therapy">Individual therapy</string>
    <string name="group_therapy">Group therapy</string>
    <string name="couples_therapy">Couples therapy</string>
    <string name="submit">Submit</string>
    <string name="checkbox_options">Select a value</string>
    <string name="menu_assessment_responses">Assessment Responses</string>
    <string name="assessment_question_text">Assessment question</string>
    <string name="assessment_response_text">Assessment response</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_personal_info">Edit info</string>
    <string name="menu_personal_info">Personal Info</string>
    <string name="rate">Rate per session</string>
    <string name="txv_therapy_info_subtext">View/edit therapy profile</string>
    <string name="txv_patient_list_info_text">List of patients</string>
    <string name="txv_patient_list_subtext">View your patient list</string>
    <string name="upload_photo">Upload photo</string>
    <string name="choose_photo">Choose photo from memory</string>
    <string name="open_camera">Take a photo</string>
    <string name="dialog_set_avatar">SetAvatarDialog</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="rating">Rating</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="prompt_update_availability">Are you available to take on more patients?</string>
    <string name="cancel">Cancel</string>
    <string name="menu_therapists">Therapists</string>

</resources>