<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/ic_baseline_videocam_24"
            android:title="@string/menu_session" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_more" />

    </group>
</menu>