<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.anna.mindhealth.ui.patient.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
        <action android:id="@+id/action_fragment_to_fragment_assessment_questions"
            app:destination="@id/nav_assessment_questions"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action android:id="@+id/action_fragment_to_fragment_assessment_responses"
            app:destination="@id/nav_assessment_responses"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    <fragment
        android:id="@+id/nav_session"
        android:name="com.anna.mindhealth.ui.patient.session.SessionFragment"
        android:label="@string/menu_session"
        tools:layout="@layout/fragment_session" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.anna.mindhealth.ui.patient.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
        <action android:id="@+id/action_fragment_to_fragment_personal_info"
            app:destination="@id/nav_personal_info"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    <fragment
        android:id="@+id/nav_more"
        android:name="com.anna.mindhealth.ui.patient.more.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/nav_assessment_questions"
        android:name="com.anna.mindhealth.ui.patient.assessment.AssessmentQuestionsFragment"
        android:label="@string/menu_assessment"
        tools:layout="@layout/fragment_assessment_questions"/>
        <action android:id="@+id/action_fragment_to_fragment_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>


    <fragment
        android:id="@+id/nav_assessment_responses"
        android:name="com.anna.mindhealth.ui.patient.assessment.AssessmentResponsesFragment"
        android:label="@string/menu_assessment_responses"
        tools:layout="@layout/fragment_assessment_responses"/>

    <fragment
        android:id="@+id/nav_personal_info"
        android:name="com.anna.mindhealth.ui.patient.profile.PatientInfoFragment"
        android:label="@string/menu_personal_info"
        tools:layout="@layout/fragment_personal_info"/>

</navigation>