<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_therapist_avatar"
        android:layout_width="@dimen/dimen_avatar_list_image"
        android:layout_height="@dimen/dimen_avatar_list_image"
        android:layout_marginTop="@dimen/screen_margin"
        android:contentDescription="@string/content_desc_avatar"
        android:scaleType="centerCrop"
        android:tint="@color/color_lighter_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/AvatarImageShapeStyle"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_therapist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/name"
        android:textAppearance="@style/ScreenTextSubTitle"
        android:textColor="@color/card_general_info_text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/imv_therapist_country"
        app:layout_constraintStart_toEndOf="@id/imv_therapist_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_therapist_short_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hint_input_short_desc"
        android:textAppearance="@style/ScreenTextSubTitle"
        android:textColor="@color/card_general_info_text_color"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/imv_therapist_country"
        app:layout_constraintStart_toEndOf="@id/imv_therapist_avatar"
        app:layout_constraintTop_toBottomOf="@id/txv_therapist_name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_therapist_country"
        android:layout_width="@dimen/dimen_icon_profile"
        android:layout_height="@dimen/dimen_icon_profile"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_desc_country_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txv_therapist_name"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/RoundedCornerImageShapeStyle"
        app:srcCompat="@drawable/ic_baseline_emoji_flags_24" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        app:dividerInsetStart="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_therapist_short_desc" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="txv_therapist_name, txv_therapist_short_desc"
        tools:layout_editor_absoluteX="388dp" />


</androidx.constraintlayout.widget.ConstraintLayout>